# bar-rs

./: Cargo.toml  flake.nix
src/modules/: bluetooth.rs  mod.rs
